<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/about_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_border_yellow"
    tools:context=".activities.ExtrasActivity">

    <TextView
        android:id="@+id/about_version"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/version"
        android:textColor="@color/circuit"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/contents_section"
        app:layout_constraintBottom_toBottomOf="@id/button_back" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contents_section"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toTopOf="@id/button_back"
        app:layout_constraintEnd_toEndOf="@id/button_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            android:id="@+id/game_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:adjustViewBounds="true"
            android:paddingTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/game_title" />

        <TextView
            android:id="@+id/title_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="0dp"
            android:text="@string/extras_title"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/game_title" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_view">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_wiki"
            android:layout_width="160dp"
            android:layout_height="48dp"
            android:background="@drawable/hp_key"
            android:onClick="wiki"
            android:text="@string/link_wiki"
            android:textColor="@color/white"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_info"
            android:layout_width="160sp"
            android:layout_height="48dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/hp_key"
            android:onClick="displayInfo"
            android:text="@string/button_info"
            android:textColor="@color/white"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_editor"
            android:layout_width="160sp"
            android:layout_height="48dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/hp_key"
            android:onClick="displayInfo"
            android:text="@string/level_editor_title"
            android:textColor="@color/white"
            />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_back"
        android:layout_width="54dp"
        android:layout_height="48dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/hp_key_back"
        android:onClick="dismiss"
        app:layout_constraintEnd_toEndOf="@+id/deko"
        app:layout_constraintBottom_toTopOf="@+id/deko"
        />

    <ImageView
        android:id="@+id/deko"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/deko_border_horizontal" />


</androidx.constraintlayout.widget.ConstraintLayout>