<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/button_border_white"
    android:scaleType="centerCrop">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inner_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <TextView
            android:id="@+id/menu_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:text="@string/circuit_editor"
            android:textSize="@dimen/dialog_text_size"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/menu_title"
            android:orientation="vertical"
            >

            <Button
                android:id="@+id/button_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_vertical_spacing"
                android:layout_marginBottom="@dimen/button_vertical_spacing"
                android:layout_marginStart="@dimen/button_horizontal_margin"
                android:layout_marginEnd="@dimen/button_horizontal_margin"
                android:textSize="@dimen/dialog_text_size"
                android:background="@color/black"
                android:text="@string/editor_name_circuit"
                android:textAllCaps="true"
                android:textColor="@color/circuit_edge"
                app:backgroundTint="@null"
                />

            <Button
                android:id="@+id/button_load"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_vertical_spacing"
                android:layout_marginBottom="@dimen/button_vertical_spacing"
                android:layout_marginStart="@dimen/button_horizontal_margin"
                android:layout_marginEnd="@dimen/button_horizontal_margin"
                android:textSize="@dimen/dialog_text_size"
                android:background="@color/black"
                android:text="@string/editor_load"
                android:textAllCaps="true"
                android:textColor="@color/circuit_edge"
                app:backgroundTint="@null"
                />

            <Button
                android:id="@+id/button_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_vertical_spacing"
                android:layout_marginBottom="@dimen/button_vertical_spacing"
                android:layout_marginStart="@dimen/button_horizontal_margin"
                android:layout_marginEnd="@dimen/button_horizontal_margin"
                android:textSize="@dimen/dialog_text_size"
                android:background="@color/black"
                android:text="@string/editor_save"
                android:textAllCaps="true"
                android:textColor="@color/circuit_edge"
                app:backgroundTint="@null"
                />


            <Button
                android:id="@+id/button_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_vertical_spacing"
                android:layout_marginBottom="@dimen/button_vertical_spacing"
                android:layout_marginStart="@dimen/button_horizontal_margin"
                android:layout_marginEnd="@dimen/button_horizontal_margin"
                android:textSize="@dimen/dialog_text_size"
                android:background="@color/black"
                android:text="@string/editor_help"
                android:textAllCaps="true"
                android:textColor="@color/circuit_edge"
                app:backgroundTint="@null"
                />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
